cabal-version:      3.0
name:               seandexer
version:            0.1.0.0
homepage:           https://github.com/sgillespie/seandexer
license:            MIT
license-file:       LICENSE
author:             Sean D Gillespie
maintainer:         sean@mistersg.net
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base >=4.15 && <5
    hs-source-dirs:   src
    default-language: GHC2021

executable seandexer
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        seandexer

    hs-source-dirs:   app
    default-language: GHC2021

test-suite seandexer-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        seandexer
