cabal-version: 3.0
name: seandexer
version: 0.1.0.0
homepage: https://github.com/sgillespie/seandexer
license: MIT
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
build-type: Simple

common common
  ghc-options:
    -Wall
    -Wmissing-deriving-strategies
  default-language: GHC2021
  default-extensions:
    DerivingStrategies
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
  build-depends:
    base >=4.15 && <5,
    relude

library
  import: common
  exposed-modules:
    Data.Cardano.Seandexer
  hs-source-dirs: src
  build-depends:
    base >=4.15 && <5

executable seandexer
  import: common
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    optparse-applicative,
    seandexer

test-suite seandexer-test
  import: common
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    seandexer
