cabal-version: 3.0
name: seandexer
version: 0.1.0.0
homepage: https://github.com/sgillespie/seandexer
license: MIT
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
build-type: Simple

common common
  ghc-options:
    -Wall
    -Wmissing-deriving-strategies
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    OverloadedStrings
    RecordWildCards
  other-extensions:
    QuantifiedConstraints
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
  build-depends:
    base >=4.15 && <5,
    relude

library
  import: common
  exposed-modules:
    Data.Cardano.Seandexer
    Data.Cardano.Seandexer.AppT
    Data.Cardano.Seandexer.Block
    Data.Cardano.Seandexer.ChainSync
    Data.Cardano.Seandexer.Config
  hs-source-dirs: src
  build-depends:
    base >=4.15 && <5,
    aeson,
    cardano-client,
    cardano-crypto-class,
    cardano-crypto-wrapper,
    cardano-ledger-alonzo,
    cardano-ledger-api,
    cardano-ledger-babbage,
    cardano-ledger-binary,
    cardano-ledger-byron,
    cardano-ledger-conway,
    cardano-ledger-core,
    cardano-ledger-mary,
    cardano-ledger-shelley,
    cardano-protocol-tpraos,
    cardano-strict-containers,
    concurrent-output,
    contra-tracer,
    mtl,
    io-classes,
    ouroboros-consensus,
    ouroboros-consensus-cardano,
    ouroboros-consensus-diffusion,
    ouroboros-network-api,
    ouroboros-network-framework,
    ouroboros-network-protocols,
    ouroboros-consensus-protocol,
    ouroboros-network,
    strict-stm,
    typed-protocols

executable seandexer
  import: common
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    optparse-applicative,
    seandexer

test-suite seandexer-test
  import: common
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    seandexer
